finish fixing everything

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "config.h": "c"
+        "config.h": "c",
+        "eeconfig_set_defaults.h": "c",
+        "letmesleep4x4testing.h": "c"
     }
 }
